# Franka-Control

./: CMakeLists.txt  README.md  __init__.py  control_loop.py  franka.py  franka_0.008.py  franka_0.08.py  log.txt  plot_traj.py  policy.py  test_calibration.py
c2p_example/: test  test.cpp  test.py  test_build.cpp  test_grasp.cpp  test_lambda  test_plot.py  test_threat.cpp  threads
camera/: __init__.py  base_camera.py  okulo.py  realsense.py  test_calibration.py  utils.py
robotmodule/: CMakeLists.txt  callback_function.h  robotmodule.cpp  robotmodule.h  test_gripper.cpp  utils.h
